--- a/index.html
+++ b/index.html
@@ -933,10 +933,10 @@ try { Object.defineProperty(window, 'noAdsAtAll', { get: function() { return tru
 					  
 						  <address>
 						  <p class="text-center"><img src="./Pc Edge - магазин компьютеров_files/phone.png" width="20">+380916197045</p>
-							<p class="text-center"><img src="./Pc Edge - магазин компьютеров_files/phone.png" width="20"><img src="./Pc Edge - магазин компьютеров_files/viber.png" width="20"><img src="./Pc Edge - магазин компьютеров_files/telegram.png" width="20">+380916142376</p>
+							<p class="text-center"><img src="./Pc Edge - магазин компьютеров_files/phone.png" width="20"><img src="./Pc Edge - магазин компьютеров_files/viber.png" width="20"><img src="./Pc Edge - магазин компьютеров_files/telegram.png" width="20">+380955769433</p>
 							<p class="text-center"><img src="./Pc Edge - магазин компьютеров_files/mail.png" alt="" width="20">pcedge@ukr.net </p>
-							<p class="text-center"><a href="https://forms.gle/83quzG3DWP2DCs8N9">Или напишите отзыв</a></p>
-							<p class="text-center">Не дозвонились? Нажмите <a href="https://forms.gle/gMDMnu9Yiup4pJqP9">сюда</a></p>
+							<p class="text-center"><a href="https://forms.gle/K6rDSufjfiCpfAYA6">Или напишите отзыв</a></p>
+							<p class="text-center">Не дозвонились? Нажмите <a href="https://forms.gle/UCwDJfSzdXAGGrvZ8">сюда</a></p>
 						  </address>
 					</div>
 </div>
