--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div></div>
   <div>
   <center><h1>Магазин временно закрыт</h1>  
-  <h2>Из-за бума майнинга магазин пришлось временно закрыть.<br>После майнинга мы готовы работать дальше<br>Приносим свои извинения за неудобства.</h2>
+  <h2>Из-за ситуации, которая сложилась на рынке видеокарт мы временно закрылись.<br>После майнинга мы готовы работать дальше в штатном режиме.<br>Приносим свои извинения за неудобства.</h2>
   <br>  
   <h4>Copyright © 2021 Pc Edge</h4>  
   </center>
