--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-  <title>Pc Edge - магазин компьюетров</title>
+  <title>PC Edge</title>
   </head>
   <body>
   <center><h1>Магазин временно закрыт</h1>  
   <h2>Из-за ситуации, которая сложилась на рынке видеокарт мы временно закрылись.<br>После майнинга мы готовы работать дальше в штатном режиме.<br>Приносим свои извинения за неудобства.</h2>
   <br>  
-  <h4>Copyright © 2021 Pc Edge</h4>  
+  <h4>Copyright © 2021 PC Edge</h4>  
   </center>
   </body>
 </html>
