--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					  <li><a href="http://youtube.com/c/relkin016">Youtube</a></li>
 					  <li><a href="PC Edge - магазин компьютеров_files/list.xlsx">Цены </a></li>
 					  <li><a href="PC Edge - магазин компьютеров_files/Оплата.docx">Оплата</a></li>
-					  <li><a href=#support.html>Связь</a></li>
+<!--					  <li><a href=#support.html>Связь</a></li>-->
 					</ul>
 				</div>
 			</div>
@@ -90,7 +90,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
-						<img src="./PC Edge - магазин компьютеров_files/PC2.jpg" alt="feature img" width="1280" class="img-responsive">
+						<img src="./PC Edge - магазин компьютеров_files/pc2.jpg" alt="feature img" width="1280" class="img-responsive">
 					</div>
 					<div class="col-md-6 wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
 					  <h2 class="text-uppercase">У нас есть много услуг и возможностей</h2>
@@ -111,13 +111,13 @@
 						<div class="pricing text-uppercase">
 						  <div class="pricing-title">
 						    <h4>Офисные Пк </h4>
-							<p>от&nbsp;307€ (10000₴)</p>
+							<p>от&nbsp;2 500₴</p>
 						   
 </div>
 							<ul>
-							  <li>Intel core 2 duo e6550</li>
-							  <li>4gb ddr2</li>
-							  <li>80gb hhd</li>
+							  <li>Intel Xeon E5420</li>
+							  <li>DDR2 4GB </li>
+							  <li>320GB HDD</li>
 							</ul>
 </div>
 					</div>
@@ -125,13 +125,13 @@
 						<div class="pricing active text-uppercase">
 						  <div class="pricing-title">
 						    <h4>Игровые пк</h4>
-							<p> от&nbsp;430€ (14000₴)</p>
+							<p> от&nbsp;10 000₴</p>
 </div>
 							<ul>
-							  <li>Amd ryzen 3 1200</li>
-							  <li>Radeon rx 470 4gb</li>
-							  <li>8GB DDR4</li>
-							  <li>512gb hhd</li>
+							  <li>Intel Xeon E5 2420 v2</li>
+							  <li>GT 1030 2GB GDDR5 Asus</li>
+							  <li>DDR3 8GB</li>
+							  <li>512GB HDD</li>
 							</ul>
 </div>
 					</div>
@@ -142,9 +142,7 @@
 							  <p>от&nbsp;300$ </p>
 </div>
 						<ul>
-							  <li>Intel xeon e5420 x2</li>
-							  <li> 16gb ddr2 ecc</li>
-							  <li>512gb hdd</li>
+							  <li>В процессе...</li>
 						  </ul>
 </div>
 					</div>
@@ -168,6 +166,7 @@
 			  </div>
 			</div>
 		</section>
+		
 		<section id="contact">
 			<div class="overlay">
 				<div class="container">
@@ -175,11 +174,10 @@
 					<div class="wow fadeInUp animated col-md-12" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
 					  <h2 class="text-uppercase text-center">Свяжитесь с нами</h2>
 					  <p class="text-center">Звоните с 10:00 до 20:00 с понедельника по пятницу</p>
-					  
 						  <address>
 						  <!--<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/phone.png" width="20">+380954670571</p>-->
 							<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/phone.png" width="20"><img src="./PC Edge - магазин компьютеров_files/viber.png" width="20"><img src="./PC Edge - магазин компьютеров_files/telegram.png" width="20">+380934116032</p>
-							<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/telegram.png" width="20">+380934116032</p>
+							<!--<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/telegram.png" width="20">t.me/</p>-->
 							<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/mail.png" width="20">pcedge@ukr.net</p>
 						  </address></div></div></div></div></section><footer><div class="container"><div class="row">
 				  <p>Copyright © 2022 PC Edge</p>
