--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					  <p>• Обязательно перед продажей мы делаем стресс-тесты и устанавливаем новую ОС - Windows 11.</p>
 					</div>
 					<div class="col-md-6 wow fadeInRight animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInRight;">
-						<img src="./PC Edge - магазин компьютеров_files/PC1.png" class="img-responsive" alt="feature img">
+						<img src="./PC Edge - магазин компьютеров_files/pc1.png" class="img-responsive" alt="feature img">
 					</div>
 				</div>
 			</div>
@@ -175,9 +175,9 @@
 					  <h2 class="text-uppercase text-center">Свяжитесь с нами</h2>
 					  <p class="text-center">Звоните с 10:00 до 20:00 с понедельника по пятницу</p>
 						  <address>
-						  <!--<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/phone.png" width="20">+380954670571</p>-->
+						  <!--<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/phone.png" width="20">+380954670571</p>
 							<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/phone.png" width="20"><img src="./PC Edge - магазин компьютеров_files/viber.png" width="20"><img src="./PC Edge - магазин компьютеров_files/telegram.png" width="20">+380934116032</p>
-							<!--<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/telegram.png" width="20">t.me/</p>-->
+							<<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/telegram.png" width="20">t.me/</p>-->
 							<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/mail.png" width="20">pcedge@ukr.net</p>
 						  </address></div></div></div></div></section><footer><div class="container"><div class="row">
 				  <p>Copyright © 2022 PC Edge</p>
