--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 				<div class="row">
 					<div class="col-md-4 wow fadeInUp templatemo-box animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;"><img src="./PC Edge - магазин компьютеров_files/clock.png" alt="" width="50">
 <h3 class="text-uppercase">Быстро</h3>
-<p>Обработаем ваш заказ и соберем компьютер в течении 5 дней </p>
+<p>Выполнение заказа в течении недели.</p>
 				  </div>
 					<div class="col-md-4 wow fadeInUp templatemo-box animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;"><img src="./PC Edge - магазин компьютеров_files/payment.png" alt="" width="50">
 <h3 class="text-uppercase">Дешево</h3>
-						<p>Все время наша компания пополняет базу знаний, что дает возможность получить производительность лучше за те же деньги.</p>
+						<p>Экономия за счет отсутствия помещений и персонала.</p>
 				  </div>
 					<div class="col-md-4 wow fadeInUp templatemo-box animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;"><img src="./PC Edge - магазин компьютеров_files/quality.png" alt="" width="50">
-<h3 class="text-uppercase">качественно</h3>
-					  <p>Мы все время стараемся иметь связь с клиентами, чтобы улучшить нашу продукцию.</p>
+<h3 class="text-uppercase">Качественно</h3>
+					  <p>Пополнение базы знаний почти каждый день.</p>
 				  </div>
 			  </div>
 		  </div>
@@ -74,10 +74,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 wow fadeInLeft animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-					  <h2 class="text-uppercase">наши сборки компьютеров</h2>
-					  <p>• Мы собираем компьютеры для разных целей - начиная от офисников заканчивая игровыми.</p>
-					  <p>• У нас есть большой выбор компьютеров под ваши задачи, цели, бюджет.</p>
-					  <p>• Обязательно перед продажей мы делаем стресс-тесты и устанавливаем новую ОС - Windows 11.</p>
+					  <h2 class="text-uppercase">Сборки компьютеров</h2>
+					  <p>• Сборка компьютеров для разных целей - начиная от офисников заканчивая игровыми.</p>
+					  <p>• Есть большой выбор компьютеров под Ваши задачи, цели, бюджет.</p>
+					  <p>• Обязательно перед продажей проверка стресс-тестами</p>
 					</div>
 					<div class="col-md-6 wow fadeInRight animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInRight;">
 						<img src="./PC Edge - магазин компьютеров_files/pc1.png" class="img-responsive" alt="feature img">
@@ -94,9 +94,9 @@
 					</div>
 					<div class="col-md-6 wow fadeInUp animated" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
 					  <h2 class="text-uppercase">У нас есть много услуг и возможностей</h2>
-					  <p>Мы можем предоставить услуги, которых нет в других магазинах:</p>
+					  <p>Имеются уникальные услуги, которых нет в других магазинах:</p>
 					  <p>• Возможность использовать и добавлять свои комплектующие в компьютер.</p>
-					  <p>•&nbsp;Возможность отдать старые комплектующие в обмен на скидку и не только.</p>
+					  <p>• Возможность отдать старые комплектующие в обмен на скидку и не только.</p>
 					</div>
 				</div>
 			</div>
@@ -180,7 +180,7 @@
 							<<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/telegram.png" width="20">t.me/</p>-->
 							<p class="text-center"><img src="./PC Edge - магазин компьютеров_files/mail.png" width="20">pcedge@ukr.net</p>
 						  </address></div></div></div></div></section><footer><div class="container"><div class="row">
-				  <p>Copyright © 2022 PC Edge</p>
+				  <p>Copyright © 2024 PC Edge</p>
 				</div>
 			</div>
 		</footer>
