--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					  <div class="col-md-1"></div>
 						<div class="col-md-10 wow fadeIn animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeIn;">
 						  <h1 class="text-upper">PC Edge</h1>
-						  <p class="tm-white">Мы - новая компания, которая занимается сборками, улучшением и обслуживанием компьютеров на территории Украины. Мы предлагаем низкие цены и высокое качество обслуживания за счет отсутствия личных офисов и малого количества сотрудников.</p>
+						  <p class="tm-white">Новая компания, специализирующаяся на сборке, улучшении и обслуживании компьютеров по всей Украине. Предлагаем конкурентоспособные цены и высокое качество сервиса благодаря минимальному количеству сотрудников и отсутствию офисов.</p>
 						</div>
 						<div class="col-md-1"></div>
 					</div>
